--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,24 @@
-aiofiles==23.1.0
-alembic==1.10.4
-blinker==1.5
-click==8.1.3
-Flask==2.3.2
-Flask-SQLAlchemy==3.0.3
-greenlet==2.0.2
-h11==0.14.0
-h2==4.1.0
-hpack==4.0.0
-hypercorn==0.14.3
-hyperframe==6.0.1
-itsdangerous==2.1.2
-Jinja2==3.1.2
-Mako==1.2.4
-MarkupSafe==2.1.2
-priority==2.0.0
-psycopg2-binary==2.9.6
-quart==0.18.4
-SQLAlchemy==2.0.12
-toml==0.10.2
-typing_extensions==4.5.0
-Werkzeug==2.3.3
-wsproto==1.2.0
+aiofiles
+alembic
+blinker
+click
+Flask
+Flask-SQLAlchemy
+greenlet
+h11
+h2
+hpack
+hypercorn
+hyperframe
+itsdangerous
+Jinja2
+Mako
+MarkupSafe
+priority
+psycopg2-binary
+quart
+SQLAlchemy
+toml
+typing_extensions
+Werkzeug
+wsproto
