--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,4 +13,8 @@ services:
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: admin
       POSTGRES_DB: college
-    # ADICIONAR VOLUME PERSISTENTE PARA SALVAR OS DADOS AO BAIXAR O CONTAINER
+    volumes:
+      - db:/var/lib/postgresql/data
+
+volumes:
+  db:
