--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,25 @@ version: '3'
 services:
   web:
     build: .
+    command: bash -c "alembic upgrade head && python main.py"
+    volumes:
+      - .:/web
     ports:
-      - "5000:5000"
+      - "5001:5000"
     depends_on:
       - db
+    networks:
+      - app-network    
   db:
     image: postgres:13.4
+    ports:
+      - "5432:5432"
     environment:
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: admin
       POSTGRES_DB: college
+    networks:
+      - app-network
     # ADICIONAR VOLUME PERSISTENTE PARA SALVAR OS DADOS AO BAIXAR O CONTAINER
+networks:
+  app-network:
