--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,8 @@ version: '3'
 services:
   web:
     build: .
-    command: bash -c "alembic upgrade head && python main.py"
+#    command: bash -c "alembic upgrade head && python main.py"
+    command: bash -c "python main.py"
     ports:
       - "5001:5000"
     depends_on:
