--- a/enrollment-service/docker-compose.yml
+++ b/enrollment-service/docker-compose.yml
@@ -1,13 +1,14 @@
 version: '3'
 
 services:
-  enrollment-service:
+  service:
+    container_name: "enrollment-app"
     build: .
     command: bash -c "python main.py"
     ports:
       - "83:80"
     depends_on:
-      enrollment-db:
+      db:
         condition: service_healthy
     networks:
       - app-network
@@ -17,7 +18,8 @@ services:
       timeout: 5s
       retries: 3
 
-  enrollment-db:
+  db:
+    container_name: "enrollment-db"
     image: postgres:13.4
     ports:
       - "5434:5432"
