--- a/auth-service/Dockerfile
+++ b/auth-service/Dockerfile
@@ -1,11 +1,10 @@
 FROM python:3.10-bullseye
 
-WORKDIR /app
-
 COPY requirements.txt .
 
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY ./app .
+COPY ./app /app
+COPY main.py .
 
 ENTRYPOINT [ "python", "main.py" ]
